Add GitHub Actions CI/CD

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -12,9 +12,11 @@ spec:
       labels:
         app: go-devops-demo
     spec:
+      imagePullSecrets:
+        - name: ghcr-secret
       containers:
         - name: go-devops-demo
-          image: ghcr.io/mohameddenta/go-devops-demo:latest
+          image: ghcr.io/mohameddenta/go-devops-demo:IMAGE_TAG
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
