--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,9 @@ jobs:
 
       - name: Run tests
         run: go test ./...
-
+      - name: Set Image variable name
+        run: |
+          echo "IMAGE=ghcr.io/mohameddenta/go-devops-demo:${IMAGE_TAG}" >> $GITHUB_ENV
       - name: Set image tag
         run: echo "IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
       - name: Build Docker image
