--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,10 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
+
+env:
+  IMAGE_NAME: ghcr.io/mohameddenta/go-devops-demo
 
 jobs:
   build-and-deploy:
@@ -17,42 +18,39 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.22'
+          go-version: "1.22"
 
       - name: Run tests
         run: go test ./...
+
       - name: Set image tag
         run: echo "IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
-      - name: Set Image variable name
-        run: |
-          echo "IMAGE=ghcr.io/mohameddenta/go-devops-demo:${IMAGE_TAG}" >> $GITHUB_ENV
-      
-      - name: Build Docker image
-        run: docker build -t $IMAGE .
 
-      - name: Log in to GitHub Container Registry
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and Push Docker image
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: |
-            ghcr.io/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-      - name: Set up kubectl
+          tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+
+      - name: Setup kubectl
         uses: azure/setup-kubectl@v4
         with:
           version: v1.29.0
-      - name: Configure Kubeconfig
+
+      - name: Configure kubeconfig
         run: |
           mkdir -p ~/.kube
-          echo "${{ secrets.KUBECONFIG }}" | base64 --decode > ~/.kube/config
+          echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
+
       - name: Deploy to Kubernetes
         run: |
-          sed -i "s/IMAGE_TAG/${{ env.IMAGE_TAG }}/g" k8s/deployment.yaml
+          sed -i "s/IMAGE_TAG/${IMAGE_TAG}/g" k8s/deployment.yaml
           kubectl apply -f k8s/
