--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -41,3 +41,26 @@ spec:
                 secretKeyRef:
                   name: go-devops-demo-secret
                   key: DB_PASSWORD
+          resources:
+            requests:
+              cpu: 100m
+              memory: 128Mi
+            limits:
+              cpu: 500m
+              memory: 512Mi
+          livenessProbe:
+            httpGet:
+              path: /health/live
+              port: 9090
+            initialDelaySeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /health/ready
+              port: 9090
+            initialDelaySeconds: 5
+          startupProbe:
+            httpGet:
+              path: /health/startup
+              port: 9090
+            failureThreshold: 30
+            periodSeconds: 5
